<resources>
    <string name="app_name">Lab2</string>
    <string name="go_second_activity">Go To Second Activity</string>
    <string name="on_create">onCreate:</string>
    <string name="on_start">onStart:</string>
    <string name="on_resume">onResume:</string>
    <string name="on_pause">onPause:</string>
    <string name="on_stop">onStop:</string>
    <string name="on_destroy">onDestroy:</string>
    <string name="on_restart">onRestart:</string>

</resources>
